fix spacing under hashphrase logo for mobile screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -280,7 +280,7 @@ body {
         height: auto;
         width: 100%;
         max-width: 275px;
-        margin: 0 auto 20px auto;
+        margin: 0 auto 10px auto;
       }
       .advertisement {
         margin: 0;
@@ -431,6 +431,7 @@ body {
       .app-logo {
         width: 350px;
         height: 100px;
+        margin-bottom: 10px;
       }
 
       .advertisement {
